[workspace]
resolver = "2"
members = [
    "goup",
    "goup-version",
    "goup-downloader"
]
default-members = ["goup"]

[workspace.package]
version = "0.10.7"
authors = ["thinkgo <thinkgo@aliyun.com>"]
edition = "2024"
rust-version = "1.85"
description = "goup is an elegant Go version manager"
keywords = [
    "goup",
    "golang",
    "version-manager",
    "tool",
    "rust"
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/thinkgos/goup-rs"
repository = "https://github.com/thinkgos/goup-rs"

[workspace.dependencies]
anyhow = "1.0"
log = "0.4"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls-native-roots", "json"] }
serde = {version = "1", features = ["derive"]}
serde_json = "1"
which = "7.0"

# dev
tempfile = "3"
temp-env = "0.3"

[workspace.lints.rust]
unsafe_code = "forbid"
# unused = "allow" # for experimental dev

[profile.dev.package."*"]
opt-level = "z"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
