[package]
name = "goup-rs"
version = "0.16.6"
authors = ["thinkgo <thinkgo@aliyun.com>"]
edition = "2024"
rust-version = "1.91"
description = "goup is an elegant Go version manager"
keywords = [
    "goup",
    "golang",
    "version-manager",
    "tool",
    "rust"
]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/thinkgos/goup-rs"
repository = "https://github.com/thinkgos/goup-rs"

build = "build.rs"

[[bin]]
name = "goup"
path = "src/main.rs"

[features]
default = []
no-self-update = []

[build-dependencies]
version_check = "0.9"
shadow-rs = "1.4"

[dependencies]
anyhow = "1.0"
log = "0.4"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls-native-roots", "json"] }
serde = {version = "1", features = ["derive"]}
serde_json = "1"
which = "8.0"
clap = {version = "4.5", features = ["derive", "env"]}
clap_complete = "4.5"
dialoguer = "0.12"
indicatif="0.18"
self_update = {version = "0.42", default-features = false, features = ["rustls", "compression-flate2", "compression-zip-deflate"]}
shadow-rs = "1.4"
env_logger = {version = "0.11", features = ["color"]}
chrono = "0.4.42"
sha2 = "0.10"
flate2 = "1.1"
tar = "0.4"
zip = "6.0"
dirs = "6.0"
semver = "1.0"
owo-colors="4"
scraper="0.24"
# git2 = "0.20"

[target.'cfg(windows)'.dependencies]
junction = "1.3"

[dev-dependencies]
# dev
tempfile = "3"
temp-env = "0.3"

[lints.rust]
unsafe_code = "forbid"
# unused = "allow" # for experimental dev

[profile.dev.package."*"]
opt-level = "z"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
