[package]
name = "goup-consts"
version = "0.2.3"
authors = ["thinkgo <thinkgo@aliyun.com>"]
edition = "2021"
rust-version = "1.70.0"
description = "goup-consts goup consts"
keywords = [
    "goup",
    "goup",
    "golang",
    "version-manager",
    "tool",
]
license = "Apache-2.0"
readme = "../README.md"
homepage = "https://github.com/thinkgos/goup"
repository = "https://github.com/thinkgos/goup"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
