[package]
name = "goup-downloader"
version.workspace =true
authors.workspace =true
edition.workspace =true
rust-version.workspace =true
description.workspace =true
keywords.workspace =true
license.workspace =true
readme.workspace =true
homepage.workspace =true
repository.workspace =true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goup-consts = {path = "../goup-consts", version = "0.2.8"}
goup-version = {path = "../goup-version", version = "0.2.8"}
anyhow = "1.0"
dirs = "5.0"
regex = "1.10"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls-native-roots"] }
sha2 = "0.10"
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
# git2 = "0.18"
