[package]
name = "goup-downloader"
version.workspace =true
authors.workspace =true
edition.workspace =true
rust-version.workspace =true
description.workspace =true
keywords.workspace =true
license.workspace =true
readme.workspace =true
homepage.workspace =true
repository.workspace =true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goup-version = {path = "../goup-version", version = "0.11"}

anyhow.workspace = true
log.workspace = true
reqwest.workspace = true
which.workspace = true
sha2 = "0.10"
flate2 = "1.1"
tar = "0.4"
zip = "4.2"

# git2 = "0.18"
