[package]
name = "goup-version"
version.workspace =true
authors.workspace =true
edition.workspace =true
rust-version.workspace =true
description.workspace =true
keywords.workspace =true
license.workspace =true
readme.workspace =true
homepage.workspace =true
repository.workspace =true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
log.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs = "5.0"
semver = "1.0"

[target.'cfg(windows)'.dependencies]
junction = "1.2"

[dev-dependencies]
tempfile.workspace = true
temp-env.workspace = true