[package]
name = "goup-rs"
version.workspace =true
authors.workspace =true
edition.workspace =true
rust-version.workspace =true
description.workspace =true
keywords.workspace =true
license.workspace =true
readme.workspace =true
homepage.workspace =true
repository.workspace =true

build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "goup"
path = "src/main.rs"

[build-dependencies]
version_check = "0.9"
shadow-rs = "0.31"

[dependencies]
goup-version = {path = "../goup-version", version = "0.9"}
goup-downloader = {path = "../goup-downloader", version = "0.9"}

anyhow.workspace = true
log.workspace = true
clap = {version = "4.5", features = ["derive", "env"]}
clap_complete = "4.5"
which = "6.0"
prettytable-rs = "0.10"
dialoguer = "0.11"
self_update = {version = "0.41", default-features = false, features = ["rustls", "compression-flate2", "compression-zip-deflate"]}
shadow-rs = "0.31"
env_logger = "0.11"