[package]
name = "govm-version"
version = "0.1.7"
authors = ["thinkgo <thinkgo@aliyun.com>"]
edition = "2021"
rust-version = "1.70.0"
description = "govm-version govm version"
keywords = [
    "goup",
    "gvm",
    "govm",
    "golang",
    "installer",
    "version-manager",
    "tool",
]
license = "Apache-2.0"
readme = "../README.md"
homepage = "https://github.com/thinkgos/govm"
repository = "https://github.com/thinkgos/govm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
govm-consts = {path = "../govm-consts"}
anyhow = "1.0"
dirs = "5.0"
regex = "1.10"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls-native-roots"] }
junction = "1.0"